--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: go
-go:
-  - 1.6.3
-env:
-  - "PATH=/home/travis/gopath/bin:$PATH"
-before_install:
-  - go get github.com/axw/gocov/gocov
-  - go get github.com/mattn/goveralls
-  - go get golang.org/x/tools/cover
+go: 
+ - 1.3.3
+ - 1.4.2
+ - 1.5.1
+ - release
+ - tip
+
 script:
-  - go test -v -covermode=count -coverprofile=coverage.out ./...
-  - goveralls -coverprofile=coverage.out -service travis-ci -repotoken $COVERALLS_TOKEN
+ - go test -v ./...
